--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.5",
+    "dotenv": "^8.6.0",
+    "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
-    "express-mongo-sanitize": "^2.0.2",
-    "joi": "^17.4.0",
-    "mongodb": "^3.6.4",
-    "mongoose": "^5.11.17",
-    "morgan": "^1.10.0"
+    "express-mongo-sanitize": "^2.1.0",
+    "joi": "^17.4.2",
+    "mongodb": "^3.7.1",
+    "mongoose": "^5.13.9",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.13"
   }
 }
